# FARM

./: CMakeLists.txt  Collector.c  Makefile  MasterWorker.c  README.md  ciao3  ciao4  input_parser.c  main.c  queue.c  queueUtility.c  threadpool.c
headers/: Collector.h  MasterWorker.h  input_parser.h  queue.h  queueUtility.h  threadpool.h  utils.h
src/: Collector.c  MasterWorker.c  farm  generafile  input_parser.c  main.c  queue.c  script_test.sh  test.sh  threadpool.c
